test/reject/18-malformed-inline-code.puml
@startuml

class Pepito(){
    void method(); /'code System.out.println('Pepito'); 
}

@enduml